--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
+    "@nestjs/platform-socket.io": "^7.2.0",
     "ioredis": "^4.17.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
-    "rxjs": "^6.5.3"
+    "rxjs": "^6.5.3",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.9.0",
@@ -36,6 +38,7 @@
     "@types/ioredis": "^4.16.7",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
+    "@types/socket.io": "^2.1.8",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
