--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
       context: .
       target: development
     volumes:
-      - /usr/src/app/dist
-      - /usr/src/app/node_modules
-      - .:/usr/src/app
+      - /srv/app/dist
+      - /srv/app/node_modules
+      - .:/srv/app
     ports:
       - ${PORT}:${PORT}
       - 9229:9229
